<resources>
    <string name="app_name">GameNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="league_of_legends">League of Legends</string>
    <string name="dota">DOTA</string>
    <string name="configuracion_de_cuenta">Configuracion de cuenta</string>
    <string name="counter_strike_go">Counter Strike: GO</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_login">Sign in</string>

    <string name="msj_suc">Acceso Correcto</string>
    <string name="msj_err">Sucedio un error</string>
    <string name="samplenoticia">SampleNoticia</string>
    <string name="ajustes">Ajustes</string>
    <string name="SampleDesc">Este es un texto de prueba para el CardView</string>
    <string name="noticias_recientes">Noticias recientes</string>
    <string name="juego">Juego:</string>
    <string name="gna">Game News App</string>
    <string name="by_jorge_franco_00074216">By: Jorge Franco, 00074216</string>
    <string name="overwatch">Overwatch</string>
    <string name="game_news">Game News</string>

</resources>
