<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/noticiasRecientes"
            android:icon="@drawable/news"
            android:title="@string/noticias_recientes" />
        <item
            android:id="@+id/lol"
            android:icon="@drawable/logo_lol"
            android:title="@string/league_of_legends" />
        <item
            android:id="@+id/dota"
            android:icon="@drawable/logo_ow"
            android:title="@string/overwatch" />
        <item
            android:id="@+id/csgo"
            android:icon="@drawable/logo_csgo"
            android:title="@string/counter_strike_go" />
    </group>

    <item android:title="@string/ajustes">
        <menu>
            <item
                android:id="@+id/confCuenta"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/configuracion_de_cuenta" />

        </menu>
    </item>

</menu>
